# pytest-result-notify

./: .flake8  README.md  pyproject.toml  pytest.ini
.github/workflows/: publish-to-pypi.yaml
src/pytest_result_notify/: plugin.py
src/pytest_result_notify/components/: __init__.py  slack_client.py  utils.py
tests/: test_demo.py
